# probelab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REDESIGN.md  benchmark_output.txt  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-check.yml  release.yml
benches/: profile_score_benchmark.py  score_benchmark.py  tokenization_benchmark.py  utils.py
benchmarks/: perf_example.py  perf_example_masks.py  perf_tokenization.py
docs/: activations.md  collection.md  datasets.md  index.md  lazy-acts-implementation-plan.md  masks.md  probes.md  storage.md  use_cases.md
examples/: 01_basic_training.py  02_custom_dataset.py  03_compare_probes.py  04_layer_sweep.py  05_multi_dataset.py  06_token_level.py  07_streaming.py  08_lora_finetuning.py  benchmark_example.py  collect_and_probe.py  dolus_chat.py  mask_showcase.py  train_probe_synthetic.py  train_streaming_simple.py
perf_checks/: backend_benchmark.py  large_dataset_benchmark.py  lazy_acts_benchmark.py  masks_benchmark.py  probe_api_snapshot.py  probe_benchmark.py  probe_only_benchmark.py  profile_collection.py  profile_pooling.py  profile_score_benchmark.py  score_benchmark.py  score_benchmark_vllm.py  tokenization_benchmark.py  verify_streaming_issue.py
perf_checks/lazy_vs_eager/: README.md  REPORT_TEMPLATE.md  benchmark_lazy_vs_eager.py
probelab/: __init__.py  _version.py  activations.py  batching.py  chat_templates.py  config.py  logger.py  masks.py  metrics.py  pipeline.py  pool.py  profiling.py  tokenization.py  types.py  visualization.py
probelab/backends/: __init__.py  base.py  context.py  registry.py  transformers.py  vllm.py
probelab/collection/: __init__.py  mirin.py  types.py
probelab/coordination/: __init__.py  graph.py  pipeline_set.py
probelab/datasets/: __init__.py  agents.py  base.py  builders.py  creative.py  cybersecurity.py  deception.py  foundation.py  hallucination.py  harmfulness.py  hf_dataset.py  legal_finance.py  medical.py  mental_health.py  multi_turn.py  multilingual.py  ood.py  reasoning.py  registry.py  science.py  spam.py  sparse_probing.py  toxicity.py
probelab/masks/: base.py  basic.py  composite.py  position.py  role.py  text.py
probelab/models/: architectures.py  hooks.py
probelab/preprocessing/: __init__.py  pre_transforms.py
probelab/probes/: __init__.py  attention.py  base.py  bilinear.py  ee_mlp.py  gated_bipolar.py  logistic.py  mass_mean.py  mha.py  mlp.py  multimax.py  positional_attention.py  rolling_attention.py  soft_attention.py  tpc.py
probelab/processing/: __init__.py  activations.py  acts.py  chat_templates.py  scores.py  tokenization.py
probelab/scripts/: __init__.py  workflows.py
probelab/storage/: __init__.py  hdf5.py  memmap.py
probelab/transforms/: __init__.py  base.py  post.py  pre.py
probelab/utils/: __init__.py  _vmap_ensemble.py  normalize.py  pooling.py  validation.py  vmap_ensemble.py
probelib/: __init__.py  logger.py  metrics.py  pipeline.py  types.py  visualization.py
probelib/benchmarks/: __init__.py  core.py  results.py  specs.py  standard.py
probelib/datasets/: __init__.py  base.py  deception.py  harmfulness.py
probelib/masks/: __init__.py  base.py  composite.py  content.py  role.py
probelib/models/: __init__.py  architectures.py  hooks.py
probelib/preprocessing/: __init__.py  base.py  post_transforms.py  pre_transforms.py
probelib/probes/: attention.py  base.py  logistic.py  mlp.py
probelib/processing/: __init__.py  activations.py  collector.py  scores.py  tokenization.py
probelib/scripts/: __init__.py  workflows.py
tests/: __init__.py  conftest.py  helpers.py  slurm_seed_e2e.sh  test_activations.py  test_acts.py  test_backends.py  test_batching.py  test_builders.py  test_chat_templates.py  test_config.py  test_datasets.py  test_edge_cases.py  test_hallucination_datasets.py  test_import_behavior.py  test_masks.py  test_metrics.py  test_mirin_integration.py  test_pipeline.py  test_probes.py  test_profiling.py  test_qwen_templates.py  test_scores.py  test_seed_e2e.py  test_storage.py  test_tokenization.py  test_visualization.py
tests/benchmarks/: __init__.py  test_benchmark.py  test_specs_and_results.py  test_standard.py
tests/coordination/: __init__.py  test_graph.py  test_pipeline_set.py
tests/datasets/: test_base.py
tests/integration/: test_collect_activations_correctness.py  test_probes_on_real_activations.py  test_tokenization.py
tests/masks/: test_integration.py
tests/preprocessing/: test_ema_pool.py  test_pre_transforms.py  test_rolling_pool.py
tests/probes/: test_attention.py  test_base_probe.py  test_empty_batch_handling.py  test_gated_bipolar.py  test_gpu_logistic.py.disabled  test_logistic.py  test_mlp.py  test_multimax.py
tests/processing/: test_activations.py  test_activations_io.py  test_collector.py  test_get_batches.py  test_scores.py  test_tokenization.py
tests/scripts/: __init__.py  test_workflows.py
tests/transforms/: test_ema_pool.py  test_post.py  test_pre.py  test_rolling_pool.py
tests/utils/: __init__.py  assertions.py  test_pooling.py  test_validation.py  test_vmap_ensemble.py
