[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probelab"
dynamic = ["version"]
description = "A library for training probes and activation monitors on language model activations."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Alex Serrano", email = "oss@alexserrano.org" }]
requires-python = ">=3.10"
keywords = [
    "machine-learning",
    "deep-learning",
    "pytorch",
    "transformers",
    "llm",
    "interpretability",
    "probing",
    "activations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "datasets>=3.6.0",
    "numpy>=2.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.6",
    "transformers>=4.55.4",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
collection = [
    "accelerate>=1.0",
]
storage = [
    "h5py>=3.10",
]

[project.urls]
Homepage = "https://github.com/serteal/probelab"
Repository = "https://github.com/serteal/probelab"
Issues = "https://github.com/serteal/probelab/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "pytest-cov>=6.2.1",
    "matplotlib>=3.10.8",
    "ruff>=0.11.5,<1",
]

[tool.ruff.lint]
ignore = ["F821"]  # forward annotation errors
per-file-ignores = { "tests/test_mirin_integration.py" = ["E402"], "tests/test_seed_e2e.py" = ["E402"], "tests/test_tokenization.py" = ["E402"] }

[tool.ty.rules]
invalid-syntax-in-forward-annotation = "ignore"

[tool.pytest.ini_options]
addopts = ["-m", "not e2e"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: tests that exercise optional dependencies or external integrations",
    "e2e: full external workflows, excluded from default test runs",
    "slow: tests that are too slow for normal local feedback",
    "gpu: tests that require accelerator hardware",
]

[tool.hatch.version]
path = "probelab/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.coverage",
    "/.DS_Store",
    "/.claude",
    "/.github",
    "/.pre-commit-config.yaml",
    "/.pytest_cache",
    "/.python-version",
    "/.ruff_cache",
    "/.venv",
    "/CLAUDE.md",
    "/Makefile",
    "/benches",
    "/build",
    "/dist",
    "/external",
    "/uv.lock",
]
